--- a/Infrastructure/templates/advdev-nexus-template.yml
+++ b/Infrastructure/templates/advdev-nexus-template.yml
@@ -21,11 +21,11 @@ objects:
   metadata:
     annotations:
       template.alpha.openshift.io/wait-for-ready: "true"
-    name: nexus3
+    name: ${NEXUS_SERVICE_NAME}
   spec:
     replicas: 1
     selector:
-      name: nexus3
+      name: ${NEXUS_SERVICE_NAME}
     strategy:
       type: Recreate
       recreateParams:
@@ -37,12 +37,12 @@ objects:
             command:
               - "/bin/bash"
               - "-c"
-              - "curl -o /tmp/setup_nexus3.sh -s https://raw.githubusercontent.com/wkulhanek/ocp_advanced_development_resources/master/nexus/setup_nexus3.sh; source /tmp/setup_nexus3.sh admin admin123 http://nexus3:8081"
+              - "curl -o /tmp/setup_nexus3.sh -s https://raw.githubusercontent.com/wkulhanek/ocp_advanced_development_resources/master/nexus/setup_nexus3.sh; source /tmp/setup_nexus3.sh admin admin123 http://${NEXUS_SERVICE_NAME}:8081"
     paused: false
     template:
       metadata:
         labels:
-          name: nexus3
+          name: ${NEXUS_SERVICE_NAME}
       spec:
         containers:
         - name: nexus3
@@ -73,21 +73,21 @@ objects:
             timeoutSeconds: 10
           resources:
             limits:
-              memory: 2Gi
+              memory: ${NEXUS_MEMORY_MAX}
             requests:
-              memory: 1Gi
+              memory: ${NEXUS_MEMORY_MIN}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
           - mountPath: /nexus-data
-            name: nexus3-volume-1
+            name: ${NEXUS_SERVICE_NAME}-volume-1
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
         terminationGracePeriodSeconds: 30
         volumes:
-        - name: nexus3-volume-1
+        - name: ${NEXUS_SERVICE_NAME}-volume-1
           persistentVolumeClaim:
             claimName: pvc-nexus
     triggers:
@@ -106,7 +106,7 @@ objects:
     annotations:
       openshift.io/host.generated: "true"
       template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
-    name: nexus-registry
+    name: ${NEXUS_SERVICE_NAME}-registry
   spec:
     tls:
       termination: edge
@@ -119,11 +119,11 @@ objects:
     annotations:
       openshift.io/host.generated: "true"
       template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
-    name: nexus3
+    name: ${NEXUS_SERVICE_NAME}
   spec:
     to:
       kind: Service
-      name: nexus3
+      name: ${NEXUS_SERVICE_NAME}
 - apiVersion: v1
   kind: PersistentVolumeClaim
   metadata:
@@ -133,11 +133,11 @@ objects:
     - ReadWriteOnce
     resources:
       requests:
-        storage: 4Gi
+        storage: ${NEXUS_STORAGE_SIZE}
 - apiVersion: v1
   kind: Service
   metadata:
-    name: nexus-registry
+    name: ${NEXUS_SERVICE_NAME}-registry
   spec:
     ports:
     - name: docker-registry
@@ -145,13 +145,13 @@ objects:
       protocol: TCP
       targetPort: 5000
     selector:
-      name: nexus3
+      name: ${NEXUS_SERVICE_NAME}
     sessionAffinity: None
     type: ClusterIP
 - apiVersion: v1
   kind: Service
   metadata:
-    name: nexus3
+    name: ${NEXUS_SERVICE_NAME}
   spec:
     ports:
     - name: maven-repository
@@ -159,6 +159,23 @@ objects:
       protocol: TCP
       targetPort: 8081
     selector:
-      name: nexus3
+      name: ${NEXUS_SERVICE_NAME}
     sessionAffinity: None
     type: ClusterIP
+parameters:
+- name: NEXUS_SERVICE_NAME
+  value: nexus3
+  displayName: Nexus Service Name
+  description: The name of Nexus Service.
+- name: NEXUS_MEMORY_MIN
+  value: 1Gi
+  displayName: Mininum Nexus Memory
+  description: Minimum amount of memory for nexus container.
+- name: NEXUS_MEMORY_MAX
+  value: 2Gi
+  displayName: Maximum Nexus Memory
+  description: Maximum amount of memory for nexus container.
+- name: NEXUS_STORAGE_SIZE
+  value: 4Gi
+  displayName: Nexus storage size
+  description: Volume space available for data.
