--- a/MLBParks/Jenkinsfile
+++ b/MLBParks/Jenkinsfile
@@ -1,4 +1,3 @@
-final GIT_REPOS = "https://github.com/takami-h/advdev_homework.git"
 // TODO ハードコーディングをやめるには？
 final CLUSTER = "https://master.na39.openshift.opentlc.com"
 final GUID = "thirata"
@@ -38,40 +37,36 @@ pipeline {
             steps {
                 echo "GUID: ${GUID}"
                 echo "CLUSTER: ${CLUSTER}"
-                // TODO checkout scm instead of git
-                git url: GIT_REPOS
-                dir(APP_HOME) {
-                    sh "sed 's/GUID/${GUID}/' ../nexus_settings.xml > ./nexus_settings.xml"
-                    sh """
-                      ${mvnCmd} \
-                          -Dmaven.test.failure.ignore=true \
-                          -Dsonar.host.url=${SONAR_URL} \
-                          clean test package \
-                          sonar:sonar
-                    """
-                }
+                checkout scm
+
+                sh "sed 's/GUID/${GUID}/' ../nexus_settings.xml > ./nexus_settings.xml"
+                sh """
+                    ${mvnCmd} \
+                      -Dmaven.test.failure.ignore=true \
+                      -Dsonar.host.url=${SONAR_URL} \
+                      clean test package \
+                      sonar:sonar
+                """
             }
             post {
                 always {
-                    junit allowEmptyResults: true, testResults: "${APP_HOME}/target/surefire-reports/TEST-*.xml"
+                    junit allowEmptyResults: true, testResults: "target/surefire-reports/TEST-*.xml"
                 }
             }
         }
         stage("Deploy to Dev") {
             steps {
-                dir(APP_HOME) {
-                    script {
-                        version = getVersionFromPom("pom.xml")
-                        devTag = "${version}-${env.BUILD_NUMBER}"
-                        prodTag = "${version}"
-                    }
-                    sh "oc project ${GUID}-parks-dev"
-                    sh "oc start-build ${APP_NAME} --from-file=target/${ARTIFACT_FILENAME} --follow"
-                    sh "oc tag ${APP_NAME}:latest ${APP_NAME}:${devTag}"
-
-                    sh "oc set image dc/${APP_NAME} ${APP_NAME}=docker-registry.default.svc:5000/${GUID}-parks-dev/${APP_NAME}:${devTag}"
-                    sh "oc rollout latest dc/${APP_NAME} && oc rollout status dc/${APP_NAME} -w "
+                script {
+                    version = getVersionFromPom("pom.xml")
+                    devTag = "${version}-${env.BUILD_NUMBER}"
+                    prodTag = "${version}"
                 }
+                sh "oc project ${GUID}-parks-dev"
+                sh "oc start-build ${APP_NAME} --from-file=target/${ARTIFACT_FILENAME} --follow"
+                sh "oc tag ${APP_NAME}:latest ${APP_NAME}:${devTag}"
+
+                sh "oc set image dc/${APP_NAME} ${APP_NAME}=docker-registry.default.svc:5000/${GUID}-parks-dev/${APP_NAME}:${devTag}"
+                sh "oc rollout latest dc/${APP_NAME} && oc rollout status dc/${APP_NAME} -w "
             }
         }
         stage("IT") {
@@ -82,11 +77,10 @@ pipeline {
             post {
                 success {
                     echo "Deploy tested artifact to Nexus Maven Repository"
-                    dir(APP_HOME) {
-                        sh """
-                          ${mvnCmd} -DaltDeploymentRepository=nexus::default::${NEXUS_URL} deploy 
-                        """
-                    }
+                    sh """
+                      ${mvnCmd} -DaltDeploymentRepository=nexus::default::${NEXUS_URL} deploy 
+                    """
+
                     echo "Push tested image to Nexus Docker Registry"
                     sh """
                       skopeo copy --src-tls-verify=false --src-creds=jenkins:\$(oc whoami -t) --dest-tls-verify=false --dest-creds=admin:admin123 \
