remove secret reference of postgresql.

--- a/Infrastructure/templates/advdev-sonarqube-template.yml
+++ b/Infrastructure/templates/advdev-sonarqube-template.yml
@@ -59,20 +59,11 @@ objects:
         - name: postgresql
           env:
           - name: POSTGRESQL_USER
-            valueFrom:
-              secretKeyRef:
-                key: database-user
-                name: postgresql
+            value: sonar
           - name: POSTGRESQL_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                key: database-password
-                name: postgresql
+            value: sonar
           - name: POSTGRESQL_DATABASE
-            valueFrom:
-              secretKeyRef:
-                key: database-name
-                name: postgresql
+            value: sonar
           image: registry.access.redhat.com/rhscl/postgresql-96-rhel7:latest
           imagePullPolicy: IfNotPresent
           ports:
