increase cpu limit to boot fast

--- a/Infrastructure/templates/advdev-nexus-template.yml
+++ b/Infrastructure/templates/advdev-nexus-template.yml
@@ -73,6 +73,7 @@ objects:
             timeoutSeconds: 10
           resources:
             limits:
+              cpu: "2"
               memory: ${NEXUS_MEMORY_MAX}
             requests:
               memory: ${NEXUS_MEMORY_MIN}
