--- a/Infrastructure/templates/advdev-sonarqube-template.yml
+++ b/Infrastructure/templates/advdev-sonarqube-template.yml
@@ -249,11 +249,11 @@ parameters:
   displayName: SonarQube Service Name
   description: The name of the OpenShift Service exposed for the SonarQube container.
 - name: SONARQUBE_CPU_MIN
-  value: "1"
+  value: 500m
   displayName: Minimum SonarQube CPU
   description: Minimum amount of CPU for sonarqube container.
 - name: SONARQUBE_CPU_MAX
-  value: "2"
+  value: 1500m
   displayName: Maximum SonarQube CPU
   description: Maximum amount of CPU for sonarqube container.
 - name: SONARQUBE_MEMORY_MIN
